--- a/index.html
+++ b/index.html
@@ -17,7 +17,56 @@
 					<a href="eletronicos.html">eletrônicos</a>
 				</div>
 			</div>
-			
+		</div>
+
+		<div id="area-principal">
+			<div id="postagem">
+				<h2>Título da postagem</h2>
+				<span class="data-postagem">postado em 12 março 2020</span>
+				<img class="img-postagem" src="./imagens/imagem1.png">
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				</p>
+
+				<span class="postado">Postado por André Moura</span>
+			</div>
+
+			<div id="postagem">
+				<h2>Título da postagem 2</h2>
+				<span class="data-postagem">postado em 20 março 2020</span>
+				<img class="img-postagem" src="./imagens/imagem2.png">
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				</p>
+
+				<span class="postado">Postado por André Moura</span>
+			</div>
+
+			<div id="postagem">
+				<h2>Título da postagem 3</h2>
+				<span class="data-postagem">postado em 20 março 2020</span>
+				<img class="img-postagem" src="./imagens/imagem5.png">
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				</p>
+
+				<span class="postado">Postado por André Moura</span>
+			</div>
 		</div>
 
 	</body>
